testsuite/tests/typecheck/should_fail/T15799.stderr

T15799.hs:46:62: error:
    • Couldn't match kind ‘TypeLits.Natural’ with ‘Op Nat’
      Expected kind ‘Op Nat’, but ‘UnOp b’ has kind ‘Nat’
    • In the first argument of ‘(<=)’, namely ‘UnOp b’
